--- a/testing/configs/100-monitors.yml
+++ b/testing/configs/100-monitors.yml
@@ -1,107 +1,510 @@
 heartbeat.monitors:
-- {id: green-0000, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0001, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0002, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0003, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0004, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0005, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0006, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0007, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0008, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0009, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0010, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0011, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0012, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0013, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0014, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0015, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0016, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0017, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0018, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0019, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0020, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0021, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0022, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0023, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0024, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0025, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0026, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0027, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0028, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0029, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0030, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0031, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0032, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0033, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0034, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0035, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0036, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0037, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0038, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0039, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0040, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0041, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0042, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0043, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0044, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0045, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0046, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0047, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0048, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0049, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0050, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0051, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0052, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0053, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0054, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0055, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0056, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0057, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0058, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0059, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0060, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0061, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0062, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0063, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0064, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0065, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0066, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0067, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0068, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0069, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0070, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0071, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0072, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0073, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0074, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0075, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0076, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0077, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0078, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0079, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0080, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0081, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0082, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0083, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0084, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0085, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0086, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0087, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0088, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0089, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0090, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0091, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0092, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0093, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0094, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0095, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0096, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0097, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0098, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
-- {id: green-0099, schedule: '@every 10s', type: http, urls: 'http://localhost:5678'}
+- id: 0000-yellow
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0001-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0002-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0003-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0004-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0005-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0006-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0007-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0008-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0009-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0010-red
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0011-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0012-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0013-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0014-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0015-yellow
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0016-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0017-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0018-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0019-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0020-red
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0021-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0022-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0023-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0024-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0025-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0026-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0027-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0028-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0029-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0030-yellow
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0031-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0032-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0033-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0034-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0035-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0036-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0037-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0038-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0039-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0040-red
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0041-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0042-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0043-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0044-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0045-yellow
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0046-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0047-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0048-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0049-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0050-red
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0051-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0052-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0053-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0054-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0055-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0056-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0057-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0058-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0059-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0060-yellow
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0061-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0062-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0063-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0064-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0065-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0066-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0067-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0068-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0069-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0070-red
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0071-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0072-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0073-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0074-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0075-yellow
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0076-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0077-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0078-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0079-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0080-red
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0081-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0082-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0083-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0084-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0085-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0086-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0087-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0088-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0089-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0090-yellow
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0091-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0092-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0093-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0094-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0095-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0096-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0097-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0098-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
+- id: 0099-green
+  schedule: '@every 30s'
+  timeout: 1s
+  type: http
+  urls: http://localhost:5678
 output.elasticsearch:
-  hosts: ['localhost:9200']
+  hosts:
+  - localhost:9200
 processors:
 - add_observer_metadata:
-    geo: {location: '37.926868, -78.024902', name: '${GEO_NAME}'}
+    geo:
+      location: 37.926868, -78.024902
+      name: ${GEO_NAME}
 
